--- a/InnoXCollab/InnoXCollab.Web/Views/Shared/_Layout.cshtml
+++ b/InnoXCollab/InnoXCollab.Web/Views/Shared/_Layout.cshtml
@@ -25,6 +25,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Tag" asp-action="Add">Add Tag</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Event" asp-action="Create">Create Event</a>
+                        </li>
                     </ul>
                 </div>
             </div>
