--- a/InnoXCollab/InnoXCollab.Web/Views/Event/Create.cshtml
+++ b/InnoXCollab/InnoXCollab.Web/Views/Event/Create.cshtml
@@ -10,7 +10,6 @@
 
 <div class="container py-5">
     <form method="post">
-
         <div class="mb-3">
             <label class="form-label">Name</label>
             <input type="text" class="form-control" id="name" asp-for="Name" />
@@ -32,6 +31,11 @@
         </div>
 
         <div class="mb-3">
+            <label class="form-label">Investor</label>
+            <input type="text" class="form-control" id="investor" asp-for="Investor" />
+        </div>
+
+        <div class="mb-3">
             <label class="form-label">Tags</label>
             <select class="form-select" asp-items="@Model.Tags"
                     asp-for="SelectedTags"></select>
@@ -42,6 +46,5 @@
                 Create
             </button>
         </div>
-
     </form>
 </div>
