--- a/InnoXCollab/InnoXCollab.Web/Views/Event/Create.cshtml
+++ b/InnoXCollab/InnoXCollab.Web/Views/Event/Create.cshtml
@@ -32,6 +32,12 @@
         </div>
 
         <div class="mb-3">
+            <label class="form-label">Type</label>
+            <select class="form-select" asp-items="@Model.Types"
+                    asp-for="SelectedType"></select>
+        </div>
+
+        <div class="mb-3">
             <label class="form-label">Tags</label>
             <select class="form-select" asp-items="@Model.Tags"
                     asp-for="SelectedTags"></select>
