--- a/InnoXCollab/InnoXCollab.Web/Views/Event/Create.cshtml
+++ b/InnoXCollab/InnoXCollab.Web/Views/Event/Create.cshtml
@@ -27,6 +27,11 @@
         </div>
 
         <div class="mb-3">
+            <label class="form-label">Investor</label>
+            <input type="text" class="form-control" id="investor" asp-for="Investor" />
+        </div>
+
+        <div class="mb-3">
             <label class="form-label">Start price</label>
             <input type="text" class="form-control" id="startPrice" asp-for="StartPrice" />
         </div>
