--- a/InnoXCollab/InnoXCollab.Web/Views/Event/List.cshtml
+++ b/InnoXCollab/InnoXCollab.Web/Views/Event/List.cshtml
@@ -21,7 +21,7 @@
 		<tbody>
 			@foreach (var item in Model)
 			{
-				<tr>
+				<tr class="align-content-center">
 					<td>@item.Id</td>
 					<td>@item.Name</td>
 					<td>
@@ -31,6 +31,13 @@
 								<span class="badge bg-secondary me-1">@tag.Name</span>
 							}
 						</div>
+					</td>
+					<td>
+						<a class="btn btn-dark"
+						   asp-area=""
+						   asp-controller="Event"
+						   asp-action="Edit"
+						   asp-route-id="@item.Id">Edit</a>
 					</td>
 					<td></td>
 				</tr>
