--- a/InnoXCollab/InnoXCollab.Web/Views/Shared/_Layout.cshtml
+++ b/InnoXCollab/InnoXCollab.Web/Views/Shared/_Layout.cshtml
@@ -29,6 +29,7 @@
 							</a>
 							<ul class="dropdown-menu">
 								<li><a class="dropdown-item" asp-area="" asp-controller="Tag" asp-action="Add">Add Tag</a></li>
+								<li><a class="dropdown-item" asp-area="" asp-controller="Tag" asp-action="List">Show all tags</a></li>
 								<li><hr class="dropdown-divider"></li>
 								<li><a class="dropdown-item" asp-area="" asp-controller="Event" asp-action="Create">Create Event</a></li>
 								<li><a class="dropdown-item" asp-area="" asp-controller="Event" asp-action="List">Show all events</a></li>
