Event related photo, wysiwyg editor finally implemented
also some adjustments to event details (client side)

--- a/client-app/src/app/layout/styles.css
+++ b/client-app/src/app/layout/styles.css
@@ -35,3 +35,21 @@ body {
             rgb(32, 167, 172) 89%) !important;
     height: 100vh;
 }
+
+.eventContent {
+    font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+    color: #ffffff;
+}
+
+.eventContent img {
+    max-width: 100% !important;
+    padding: 20px;
+}
+
+.eventContent blockquote {
+    border-left: 4px solid #2d2d2d;
+    padding-left: 16px;
+    margin: 10px 0;
+    color: #a0a0a0;
+    font-style: italic;
+}
